--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           <li class="menu__item"><a href="team/" class="menu__link">Team</a></li>
           <li class="menu__item">
             <div class="menu__switch">  
-              <span class="menu__language">En</span>
-              <a href="#" class="menu__language menu__language--is-hidden">Fr</a>
+              <span class="menu__language">Fr</span>
+              <a href="#" class="menu__language menu__language--is-hidden">En</a>
             </div>
           </li>
-          <li class="menu__item menu__item--has-no-hover"><a href="#" class="menu__button">Login</a></li>
+          <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
       </div>
     </nav>
@@ -46,6 +46,12 @@
           <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
         </div>
       </section>
+      <section class="slider__slide slider__slide--is-fourth js-slide">
+        <div class="hero">
+          <h2 class="hero__caption">MIX YOUR BODY AND EMOTIONS</h2>
+          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
+        </div>
+      </section>
     </div>
     
     <div class="controls">
@@ -54,6 +60,7 @@
           <li class="controls__number controls__number--is-active js-number">01</li>
           <li class="controls__number js-number">02</li>
           <li class="controls__number js-number">03</li>
+          <li class="controls__number js-number">04</li>
         </ol>
         <p class="controls__scroll">scroll</p>
         <div class="controls__switcher">
@@ -146,7 +153,7 @@
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Follow us</h4></li>
         <li class="footer-menu__item footer-menu__item--is-social">
           <a href="https://www.instagram.com/mixstudioch/" class="footer-menu__social footer-menu__social--is-instagram "></a>
-          <a href="" class="footer-menu__social footer-menu__social--is-fb"></a>
+          <a href="https://www.facebook.com/MIX-studio-230644687417243/" class="footer-menu__social footer-menu__social--is-fb"></a>
         </li>
       </ul>
       <div class="footer__divider"></div>
