--- a/prices/index.html
+++ b/prices/index.html
@@ -17,12 +17,8 @@
           <li class="menu__item"><a href="../studios/" class="menu__link ">Studios</a></li>
           <li class="menu__item"><p class="menu__link menu__link--is-current">Prices</p></li>
           <li class="menu__item"><a href="../team/" class="menu__link">Team</a></li>
-          <li class="menu__item">
-            <div class="menu__switch"> 
-              <span class="menu__language">En</span>
-              <a href="#" class="menu__language menu__language--is-hidden">Fr</a>
-            </div>
-          </li>
+          <li class="menu__item"><a href="blog/" class="menu__link">blog &ndash; Fuel</a></li>
+          <li class="menu__item"><a href="fr/" class="menu__link">Fr</a></li>
           <li class="menu__item menu__item--has-no-hover"><a href="#" class="menu__button">Login</a></li>
         </ul>
       </div>
@@ -277,7 +273,7 @@
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Follow us</h4></li>
         <li class="footer-menu__item footer-menu__item--is-social">
           <a href="https://www.instagram.com/mixstudioch/" class="footer-menu__social footer-menu__social--is-instagram "></a>
-          <a href="" class="footer-menu__social footer-menu__social--is-fb"></a>
+          <a href="https://www.facebook.com/MIX-studio-230644687417243/" class="footer-menu__social footer-menu__social--is-fb"></a>
         </li>
       </ul>
       <div class="footer__divider"></div>
